[package]
name = "comm"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { version = "=0.8.6", features = ["multipart", "ws"] }
chacha20poly1305 = "0.10"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
chrono-tz = "0.10.4"
futures-util = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
password-hash = { version = "0.5", features = ["rand_core"] }
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
